# rust-api

./: .env.example  .gitignore  Cargo.toml  README.md  TASKS.md  compose.yml
.cargo/: config.toml
docker/unoserver/: Dockerfile
docs/: api-guide.md  benchmarks.md
migrations/: 20260525024211_create_users.sql  20260527015047_create_login_attempts.sql  20260527153000_add_user_approval_and_role.sql  20260528002000_replace_user_approval_with_status.sql  20260531070019_create_conversion_jobs.sql  20260531070111_create_activity_logs.sql  20260601000000_align_schema_with_rust_structs.sql  20260601000001_set_conversion_jobs_input_file_not_null.sql  20260601000002_add_conversion_jobs_duration_ms.sql
src/: lib.rs  main.rs
src/application/: activity_log.rs  auth.rs  conversion.rs  conversion_worker.rs  error.rs  jwt.rs  login_attempt.rs  mod.rs  password.rs
src/config/: env.rs
src/domain/: activity_log.rs  conversion_job.rs  image_to_pdf_converter.rs  image_validator.rs  login_attempt.rs  mod.rs  pdf_to_image_converter.rs  pdf_validator.rs  storage.rs  user.rs  word_validator.rs
src/infrastructure/: activity_log_repository.rs  conversion_job_repository.rs  image_to_pdf_converter.rs  image_validator.rs  local_storage_repository.rs  login_attempt_repository.rs  mod.rs  pdf_to_image_converter.rs  pdf_validator.rs  unoserver_client.rs  user_repository.rs  word_validator.rs
src/presentation/: mod.rs  openapi.rs  router.rs  state.rs  validation.rs
tests/: api_integration.rs  conversion_use_cases.rs  openapi_test.rs  pdf_converter.rs  performance_benchmark.rs
(+17 files in other folders)
