[package]
name = "task-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.0", features = ["macros"] } 
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.212", features = ["derive"] }
serde_json = "1.0.142"
log = "0.4.27"
env_logger = "0.11.6"
dotenvy = "0.15.7"
thiserror = "2.0.18"
validator = { version = "0.20.0", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio",
  "tls-native-tls",
  "postgres",
  "uuid",
  "chrono"] }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
argon2 = "0.5"
password-hash = { version = "0.5", features = ["getrandom"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
axum-extra = { version = "0.12.6", features = ["typed-header"] }
utoipa = { version = "5.5", features = ["uuid", "chrono"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }
tower_governor = { version = "0.8", features = ["axum"] }
async-trait = "0.1.89"
lopdf = { version = "0.40.0" }

[dev-dependencies]
pretty_assertions = "1.4.1"
